test/jsbt/vectors/errors/accepted-probes/index.js
export const one = (msg) => new Uint8Array();
export const two = (msg) => new Uint8Array();
